WIP: Add metadata schema versions